Fix H and M maintainability issues